test/message/eval_messages.out
[eval]
[eval]:1
with(this){__filename}
^^^^
SyntaxError: Strict mode code may not include a with statement
    at new Script (vm.js:*:*)
    at createScript (vm.js:*:*)
    at Object.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    at evalScript (internal/process/execution.js:*:*)
    at internal/main/eval_string.js:*:*
42
42
[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:1:7
    at Script.runInThisContext (vm.js:*:*)
    at Object.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    at evalScript (internal/process/execution.js:*:*)
    at internal/main/eval_string.js:*:*

[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:1:7
    at Script.runInThisContext (vm.js:*:*)
    at Object.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    at evalScript (internal/process/execution.js:*:*)
    at internal/main/eval_string.js:*:*
100
[eval]:1
var x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [eval]:1:16
    at Script.runInThisContext (vm.js:*:*)
    at Object.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([eval]-wrapper:*:*)
    at Module._compile (internal/modules/cjs/loader.js:*:*)
    at evalScript (internal/process/execution.js:*:*)
    at internal/main/eval_string.js:*:*

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `node --trace-uncaught ...` to show where the exception was thrown)

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `node --trace-uncaught ...` to show where the exception was thrown)
done
